# chans

./: CMakeLists.txt  README.md  chunker.cpp  chunker.h  compile.sh  keyring.cpp  keyring.h  main.cpp  secret.c  secret.cpp  secret.h
chans/: chunker.cpp  chunker.h  keyring.h  main.cpp  secret.cpp  secret.h  test.cpp
src/: main.cpp
tests/: encrypted_token.asc
untitled/: CMakeLists.txt  base64.c  base64.h  main.c  secret.c  secret.h  uuid.c  uuid.h
